
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct Userinfo {int shell; int home_dir; int info; int group_id; int user_id; int hash; int username; } ;


 char* malloc (int) ;
 int snprintf (int *,int ,char const*,int ,int ,int ,int ,int ,int ,int ) ;
 int sprintf (char*,char const*,int ,int ,int ,int ,int ,int ,int ) ;

char *generate_passwd_line(struct Userinfo u) {
  const char *format = "%s:%s:%d:%d:%s:%s:%s\n";
  int size = snprintf(((void*)0), 0, format, u.username, u.hash,
    u.user_id, u.group_id, u.info, u.home_dir, u.shell);
  char *ret = malloc(size + 1);
  sprintf(ret, format, u.username, u.hash, u.user_id,
    u.group_id, u.info, u.home_dir, u.shell);
  return ret;
}
